# scrapy-demo

./: README.md
100-hello_scrapy/: README.md  pyproject.toml
101-json_writer/: README.md  items.jl  pyproject.toml
101-json_writer/spider/: pipelines.py  settings.py
101-json_writer/spider/spiders/: bilibili.py
102-mongodb_wirter/: README.md  pyproject.toml
102-mongodb_wirter/spider/: items.py  pipelines.py  settings.py
102-mongodb_wirter/spider/spiders/: bilibili.py
103-debug_scrapy/: README.md  pyproject.toml
103-debug_scrapy/spider/: items.py
103-debug_scrapy/spider/spiders/: bilibili.py
